# baxter_base

./: CMakeLists.txt  LICENSE.txt  package.xml
config/: control.yaml  hardware.yaml
launch/: control.launch  description.launch  gazebo.launch  gazebo_spawn.launch  robot.launch  teleop.launch  view_model.launch
meshes/: base.dae  pedestal.dae  wheel_left.dae  wheel_right.dae
urdf/: baxter_base.urdf.xacro  description.urdf.xacro  mecanum_wheel.urdf.xacro  pedestal.urdf.xacro
